# PSIST

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.in
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: .#structures.h  Makefile  Makefile.am  Makefile.in  TimeTracker.h  block_map.h  manipulate_structures.h  manipulate_structures.h~  qrank.h  qrank.h~  stree.h  stree.h~  stree_array.h  stree_config.h  stree_hashmap.h  stree_map.h  stree_map.h~  stree_query.h  stree_strmat.c  stree_strmat.h  stree_structures.h  structures.h
src/.deps/: compare.P  eval.P  parser.P
test/: Makefile  Makefile.am  Makefile.in  query  query.cpp  scopdatabase.txt  scopquery.txt  testdatabase.txt  testquery.txt
test/.deps/: query.Po
test/PDB_coord/: 152L_.coord  153L_.coord  154L_.coord  170L_.coord  196L_.coord  197L_.coord  1A0K_.coord  1A25A.coord  1A25B.coord  1A27_.coord  1A2I_.coord  1A2ZC.coord  1A2ZD.coord  1A33_.coord  1A39_.coord  1A3C_.coord  1A3S_.coord  1A3Z_.coord  1A40_.coord  1A44_.coord  1A58_.coord  1A5LB.coord  1A5MB.coord  1A5NB.coord  1A5OB.coord  1A5R_.coord  1A5V_.coord  1A5W_.coord  1A5X_.coord  1A66A.coord  1A67_.coord  1A6X_.coord  1A70_.coord  1A7D_.coord  1A7E_.coord  1A7S_.coord  1A7VA.coord  1A7VB.coord  1A7W_.coord  1A80_.coord  (+1752 more)
test/data/: Distance.java  pdb.list  testpdb.list
test/data/coord/: 351C_.coord  3CI2_.coord  3CYR_.coord  3FUA_.coord  3GRX_.coord  3HCK_.coord  3HSF_.coord  3MSPA.coord  3MSPB.coord  3PCNN.coord  3PCNO.coord  3PCNP.coord  3PCNQ.coord  3PCNR.coord  3PDZA.coord  3PHV_.coord  3PHY_.coord  3PNP_.coord  3PYP_.coord  3RHN_.coord  3RPBA.coord  3TGL_.coord  3TMYA.coord  3UBPA.coord  3VUB_.coord  3YGSC.coord  3YGSP.coord
