# Copyright (C) 2002 M.J. Zaki <zaki@badr.cs.rpi.edu> 
# Written by palmep2@cs.rpi.edu
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = src test
EXTRA_DIST = lib/M-tree