# Copyright (C) 2002 M.J. Zaki <zaki@badr.cs.rpi.edu> 
# Written by palmep2@cs.rpi.edu
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT(test/query.cpp)
AM_INIT_AUTOMAKE(proteinindex, 0.1)
AM_CONDITIONAL(am__fastdepCC, 1)
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_OUTPUT(Makefile src/Makefile test/Makefile \
	)
